--- a/main/index.html
+++ b/main/index.html
@@ -193,7 +193,7 @@
     </div><!-- end section -->
     <br><br><br>
     <section id="result"></section>
-    <section id="conatiners">
+    <section id="conatiners" style="display: none;">
       <h1>It's unfortunate looking at some of the factors you have chances of diabetes, please look at a personalized report based on your data</h1>
 
       <div id="DIVbp" class="Harshcontainer">
